# fmfi-machine-learning

./: .gitignore  README.md  pyproject.toml
project/: feature_analysis.py  feature_engineering.py  main.py  nb.ipynb  resnet.py  segmentation.py  training.py  utils.py
project/test_features/: test_segmentation_features.parquet
project/train_features/: train_segmentation_features.parquet
project/validation_features/: features.parquet  valid_segmentation_features.parquet
